[Android] Restricting Smart Go Next only in Android

Current implementation of Smart Go Next will execute for
all platforms because of calculation logic touches blink.
Now restricting this logic only in Android platform. Due to
a regression in blink wrt element focus time, currently applying
a threshold of focus calculation.

Bug: 781026
Change-Id: I96c60e15186bddae087345f2d5b25a359dd4ac48