third_party/WebKit/Source/core/page/FocusController.cpp
@@ -1069,6 +1069,10 @@ Element* FocusController::FindFocusableElement(WebFocusType type,
 
 Element* FocusController::NextFocusableElementInForm(Element* element,
                                                      WebFocusType focus_type) {
+  // TODO(ajith.v) Due to crbug.com/781026 when next/previous element is far
+  // from current element in terms of tabindex, then it's signalling CPU load.
+  // Will nvestigate further for a proper solution later.
+  static const int kFocusTraversalThreshold = 50;
   element->GetDocument().UpdateStyleAndLayoutIgnorePendingStylesheets();
   if (!element->IsHTMLElement())
     return nullptr;
@@ -1087,9 +1091,11 @@ Element* FocusController::NextFocusableElementInForm(Element* element,
     return nullptr;
 
   Element* next_element = element;
+  int traversal = 0;
   for (next_element = FindFocusableElement(focus_type, *next_element);
-       next_element;
-       next_element = FindFocusableElement(focus_type, *next_element)) {
+       next_element && traversal < kFocusTraversalThreshold;
+       next_element = FindFocusableElement(focus_type, *next_element),
+      ++traversal) {
     if (!next_element->IsHTMLElement())
       continue;
     if (ToHTMLElement(next_element)->isContentEditableForBinding() &&
